# algo-trading-engine

./: .cursorrules  .cursorrules.md  .gitignore  .pylintrc  CALENDAR_CONFIG_USAGE.md  LICENSE  PACKAGE_INTERFACE_IMPLEMENTATION.md  PACKAGE_INTERFACE_USAGE.md  README.md  api_retry_handler.py  config.py  data_retriever.py  examine_cache.py  fix-paper-trading-indicator-warmup.md  lstm_model.py  main.py  market_state_classifier.py  options_handler.py  predict_today.py  progress_tracker.py  pyproject.toml  requirements.txt  setup_env.py  update_calendar_config.py
.cursorrules/: agentic_standards.md  vo_rules.md
docs/: Bull Market SPY Mean Reversion v2.md  enhanced_volume_validation_guide.md  logging_improvement_plan.md  ma_velocity_analysis_guide.md  public_api_organization.md  strategy_builder_guide.md  trend_detector_utility.md  upward_trend_drawdown_analysis_implementation_summary.md  volume_validation_guide.md
features/: bar_interval_support.md  bullish_market_regime_drawdown_analysis.md  capital_allocation_and_risk_management.md  daily_drawdown_likelihood_analysis.md  debit_spread_support.md  improved_data_fetching.md  interactive_strategy_recommendations.md  post_upward_trend_return_analysis.md  public_api_refactoring.md  upward_trend_drawdown_analysis.md  upward_trend_reversal_strategy.md  volume_trading_backtest.md  warm_up_period.md
predictions/: prediction_SPY_20250629.txt  prediction_SPY_20250630.txt
tests/: test_capital_manager.py  test_cli_integration.py  test_daily_drawdown_likelihood_analysis.py  test_data_retriever_changes.py  test_debit_spread_support.py  test_dynamic_state_mapping.py  test_hmm_features_bug.py  test_interactive_recommender.py  test_lazy_public_api.py  test_ma_velocity_analysis.py  test_ml_pipeline.py  test_options_dtos.py  test_options_handler_phase2.py  test_options_handler_phase3.py  test_options_handler_phase5_error_handling.py  test_options_handler_phase5_integration.py  test_options_handler_phase5_performance.py  test_options_handler_phase5_simple.py  test_options_helpers_phase4.py  test_phase2_integration.py  test_public_api.py  (+22 more)
(+200 files in other folders)
